force-app/main/default/objects/Launchpad__Program__c/Launchpad__Program__c.object-meta.xml
<CustomObject>
    <description>This Object is used to track programs awarded to the organization i.e. WIOA Adult, TAA, etc.</description>
    <label>Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>