force-app/main/default/objects/Launchpad__Program__c/fields/Application_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Close_Date__c</fullName>
    <label>Application Close Date</label>
    <type>DateTime</type>
</CustomField>