force-app/main/default/objects/Launchpad__Program__c/fields/Program_Address__c.field-meta.xml
<CustomField>
    <fullName>Program_Address__c</fullName>
    <label>Program Address</label>
    <type>Address</type>
</CustomField>