force-app/main/default/objects/Launchpad__Program__c/fields/Program_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Program_Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>