force-app/main/default/objects/Launchpad__Program__c/fields/Youth_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Youth_Notification_Date__c</fullName>
    <label>Youth Notification Date</label>
    <type>DateTime</type>
</CustomField>