force-app/main/default/objects/Launchpad__Program__c/recordTypes/Provider_Program.recordType-meta.xml
<RecordType>
    <fullName>Provider_Program</fullName>
    <active>true</active>
    <label>Provider Program</label>
</RecordType>