force-app/main/default/objects/Launchpad__Program__c/recordTypes/Session.recordType-meta.xml
<RecordType>
    <fullName>Session</fullName>
    <active>true</active>
    <label>Session</label>
</RecordType>