force-app/main/default/objects/Launchpad__Program__c/validationRules/Launchpad__Restrict_Program_Name_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Launchpad__Restrict_Program_Name_Update</fullName>
    <active>true</active>
    <description>This VR prevents Profiles from updating the Program Name</description>
    <errorConditionFormula>AND(
ischanged( Name ),
PRIORVALUE(Name) &lt;&gt; Name,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Sorry, you do not have permission to update the Program Name.</errorMessage>
</ValidationRule>