force-app/main/default/objects/Launchpad__Program__c/listViews/Launchpad__Active_Programs.listView-meta.xml
<ListView>
    <fullName>Launchpad__Active_Programs</fullName>
    <columns>NAME</columns>
    <columns>Launchpad__Funds_Allowed__c</columns>
    <columns>Launchpad__Active__c</columns>
    <columns>Launchpad__Program_Year_Start__c</columns>
    <columns>Launchpad__Program_Year_End__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Launchpad__Active__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Active Programs</label>
</ListView>