force-app/main/default/objects/Launchpad__Program__c/listViews/Launchpad__All.listView-meta.xml
<ListView>
    <fullName>Launchpad__All</fullName>
    <columns>NAME</columns>
    <columns>Launchpad__Funds_Allowed__c</columns>
    <columns>Launchpad__Active__c</columns>
    <columns>Launchpad__Program_Year_Start__c</columns>
    <columns>Launchpad__Program_Year_End__c</columns>
    <columns>Launchpad__Grant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Programs</label>
</ListView>